Added some style to the coming soon text

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <title>fit-az</title>
 </head>
 <body>
-    <div>
-        <p>coming soon</p>
+    <div class="outer-border">
+        <div class="inner-background">
+            <p class="text">Coming Soon</p>
+        </div>
     </div>
     <script
 			  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
